test/integration/testdata/etcd.yaml
# ref: https://operatorhub.io/install/etcd.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: my-etcd
