test/integration/testdata/vcjob.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-volcano
