test/integration/testdata/busybox-arm64.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    integration-test: busybox
spec:
  containers:
    - image: gcr.io/k8s-minikube/busybox-arm64:1.28.4-glibc
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      name: busybox
  restartPolicy: Always
