test/integration/testdata/busybox-mount-test-arm64.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-mount
  labels:
    integration-test: busybox-mount

spec:
  restartPolicy: Never
  containers:
    - name: mount-munger
      image: gcr.io/k8s-minikube/busybox-arm64:1.28.4-glibc
      command: ["/bin/sh", "-c", "--"]
      args:
        - cat /mount-9p/created-by-test;
          echo test > /mount-9p/created-by-pod;
          rm /mount-9p/created-by-test-removed-by-pod;
          echo test > /mount-9p/created-by-pod-removed-by-test
          date >> /mount-9p/pod-dates
      volumeMounts:
        - mountPath: /mount-9p
          name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        path: /mount-9p
