test/integration/testdata/busybox-mount-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-mount
  labels:
    integration-test: busybox-mount
spec:
  containers:
    - image: busybox:1.28.4-glibc
      command: ["/bin/sh", "-c", "--"]
      args:
        [
          "cat /mount-9p/created-by-test; echo test > /mount-9p/created-by-pod; rm /mount-9p/created-by-test-removed-by-pod; echo test > /mount-9p/created-by-pod-removed-by-test;",
        ]
      name: busybox
      volumeMounts:
        - mountPath: /mount-9p
          name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        # directory location on host
        path: /mount-9p
