test/integration/testdata/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    integration-test: busybox
spec:
  containers:
  - image: busybox:glibc
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
