test/integration/testdata/nginx-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pause-test
  labels:
    name: pause-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: pause-test
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
