test/integration/testdata/nginx-gvisor.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-gvisor
  labels:
    run: nginx
    runtime: gvisor
spec:
  runtimeClassName: gvisor
  containers:
  - name: nginx
    image: public.ecr.aws/nginx/nginx:alpine
