test/integration/testdata/node-affinity-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: affinity-pod
spec:
  nodeSelector:
    kubernetes.io/hostname: %s
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "echo hello > /data/hello && sleep 3600"]
    volumeMounts:
    - mountPath: "/data"
      name: vol
  volumes:
  - name: vol
    persistentVolumeClaim:
      claimName: node-affinity-pvc
