test/integration/testdata/testsvc.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-svc
  name: nginx-svc
  namespace: default
spec:
  containers:
  - name: nginx
    image: public.ecr.aws/nginx/nginx:alpine
    ports:
    - containerPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx-svc
  name: nginx-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-svc
  sessionAffinity: None
  type: LoadBalancer
