test/integration/testdata/nginx-ingv1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
  labels:
    integration-test: ingress
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
