test/integration/testdata/nginx-ingv1beta.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    integration-test: ingress
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx
          servicePort: 80
